# TPb

./: .coverage.sunnuls.pid13828.XvE6xulx  .gitignore  1_COLLECT_SCREENSHOTS.bat  1_collect_screenshots.py  2_annotate_guide.txt  3_TRAIN_MODEL.bat  3_train_model.py  4_TEST_MODEL.bat  4_test_model.py  CHANGELOG.md  CHANGES.md  COMPLETE_GUIDE.md  FINAL_SUMMARY.md  FIX_CHILD_WINDOW.md  FIX_WINDOW_CAPTURE.md  INSTALL_AUTO_NAV.bat  INSTALL_SIMULATION_DEPS.bat  LAUNCHER_FIX_KEYBOARD.txt  LAUNCHER_TEST_MODE.md  MENU.bat  OPTIMIZATION_REPORT.md  PROJECT_STATUS.md  QUICK_START_LAUNCHER.md  QUICK_START_OCR.md  QUICK_YOLO_TEST.bat  README.NEW.md  README.md  README_LAUNCHER.md  README_LAUNCHER_START.md  README_OCR_TEST.txt  README_bridge.md  ROADMAP.md  ROADMAP4_COMPLETE.md  ROADMAP5_COMPLETE.md  ROADMAP6_COMPLETE.md  ROADMAP6_PHASE5_COMPLETE.md  ROADMAP6_PHASE6_COMPLETE.md  RUN_GUI.bat  SECURITY.md  SETUP_LAUNCHER.bat  (+100 more)
backend/: package.json  tsconfig.json
bridge/: __init__.py  action_simulator.py  action_translator.py  bot_identification.py  bridge_main.py  demo_mode.py  external_hub_client.py  humanization_sim.py  live_test_runner.py  lobby_scanner.py  main.py  monitoring.py  opportunity_detector.py  roi_manager.py  safety.py  screen_capture.py  state_bridge.py  test_capture_stability.py
coach_app/: __init__.py  config.py
config/: accounts.json  anchor_templates.yaml  bot_profiles.json  bot_settings.json  vm_network.yaml
config_demo_temp/: accounts.json
docs/: API.md  API_HUB_DECISION.md  ARCHITECTURE.md  BOT_PROFILES.md  CONTRIBUTING.md  GTO_ENGINE.md  LIVE_RTA.md  (+22 more)
(+538 files in other folders)
